# typewriter

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c  snd_backspace.h  snd_bell.h  snd_clack.h  snd_click.h  snd_keypress.h  snd_space.h  typewriter.ini
